# UpOnlyContract

./: .prettierignore  Anchor.toml  package-lock.json  package.json
programs/simple-token/: Cargo.toml
programs/simple-token/src/: lib.rs
tests/: up-only-test.ts
